--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "http://yuta-seki2020.github.io/hugo_blog/"
+languageCode = "ja-JP"
+title = "SEKIと愉快な仲間たち"
+publishDir = "docs"
+copyright = "Copyright; 2020, YUTA SEKI. All rights reserved"
+theme = "pickles"
