--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/pickles"]
 	path = themes/pickles
 	url = https://github.com/mismith0227/hugo_theme_pickles.git
+[submodule "themes/picklels"]
+	path = themes/picklels
+	url = https://github.com/mismith0227/hugo_theme_pickles.git
+[submodule "toha"]
+	path = toha
+	url = https://github.com/hossainemruz/toha.git
