--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ languageCode = "ja-JP"
 title = "SEKIと愉快な仲間たち"
 publishDir = "docs"
 copyright = "Copyright; 2020, YUTA SEKI. All rights reserved"
-theme = "pickles"
+theme = "Toha"
